tests/errors/operators/exponentiation_faults.sad
# Exponentiation division by zero: zero raised to a negative power
show(0 ** -1)
